[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "disk-bptt"
version = "0.1.0"
description = "Full-sequence BPTT with disk-offloaded autograd — trade SSD space for RAM"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["torch>=2.0"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Repository = "https://github.com/TODO/DiskBPTT"

[tool.setuptools]
py-modules = ["disk_bptt"]
